--- a/app.css
+++ b/app.css
@@ -4,6 +4,12 @@
     margin: 0;
 }
 
+body {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
