create sections of stacking elements
add border to visualize sections

--- a/app.css
+++ b/app.css
@@ -10,6 +10,10 @@ body {
     flex-direction: column;
 }
 
+div {
+    border: 1px solid black;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
