--- a/app.css
+++ b/app.css
@@ -22,6 +22,24 @@ div {
     padding: 1rem 2rem;
 }
 
+.total>*+* {
+    margin-top: 1rem;
+}
+
+.score>*+* {
+    margin-top: 1rem;
+}
+
+.total .score {
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
