--- a/app.css
+++ b/app.css
@@ -19,7 +19,7 @@ div {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 2rem 3rem;
 }
 
 .total>*+* {
@@ -38,6 +38,11 @@ div {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.itemizedSummary {
+    padding: 1rem;
+    align-items: flex-start;
 }
 
 .attribution {
