--- a/app.css
+++ b/app.css
@@ -49,7 +49,13 @@ div {
     width: 100%;
     padding: .5rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+}
+
+.taskScore:last-child {
+    /* can't use the justify-self when using flexbox - jusify content operates by controling how leftover space is used
+i.e. where the empty space is placed in relationship to the group of items */
+    justify-self: flex-end;
 }
 
 .attribution {
