add first draft of task row spacing

--- a/app.css
+++ b/app.css
@@ -52,8 +52,12 @@ div {
     justify-content: flex-start;
 }
 
-.taskScore div:last-child {
+.taskScore *:last-child {
     margin-left: auto;
+}
+
+.taskScore *:first-child {
+    padding-right: .5rem;
 }
 
 .attribution {
