--- a/app.css
+++ b/app.css
@@ -60,6 +60,18 @@ div {
     padding-right: .5rem;
 }
 
+.maxWidth {
+    width: 100%;
+}
+
+button {
+    width: 100%;
+    font-size: 18px;
+    padding: .75rem;
+    border: 0;
+    border-radius: 20px;
+}
+
 .attribution {
     font-size: 11px;
     text-align: center;
