--- a/app.css
+++ b/app.css
@@ -6,6 +6,7 @@
 
 body {
     height: 100vh;
+    font-family: 'Hanken Grotesk';
     font-size: 18px;
     display: flex;
     flex-direction: column;
