adjust font weight and opacity of last div in task rows

--- a/app.css
+++ b/app.css
@@ -84,6 +84,11 @@ div {
 
 .taskScore *:last-child {
     margin-left: auto;
+    font-weight: 700;
+}
+
+.taskScore *:last-child span {
+    opacity: .3;
 }
 
 .taskScore *:first-child {
