enlalrge mobile design to comparable project width and updated top card element proportions

--- a/app.css
+++ b/app.css
@@ -18,7 +18,7 @@ div {
 }
 
 .marginTop>*+* {
-    margin-top: 1rem;
+    margin-top: 1.5rem;
 }
 
 .flexColumn {
@@ -28,7 +28,7 @@ div {
 
 .total {
     align-items: center;
-    padding: 1.25rem 3rem 2rem 3rem;
+    padding: 1.5rem 3rem 2rem 3rem;
     border-radius: 0 0 2rem 2rem;
     background: linear-gradient(to top, hsl(241, 81%, 54%), hsl(252, 100%, 67%));
     color: hsl(241, 100%, 89%);
@@ -47,7 +47,7 @@ div {
 }
 
 .score>*:first-child {
-    font-size: 3rem;
+    font-size: 3.5rem;
     font-weight: 800;
     color: white;
 }
@@ -55,6 +55,7 @@ div {
 .score>*:last-child {
     font-size: .90rem;
     color: hsl(241, 100%, 89%, .5);
+    font-weight: 700;
 }
 
 /* .score>*+* {
@@ -62,8 +63,8 @@ div {
 } */
 
 .total .score {
-    width: 8rem;
-    height: 8rem;
+    width: 9rem;
+    height: 9rem;
     border-radius: 50%;
     justify-content: center;
     align-items: center;
