--- a/app.css
+++ b/app.css
@@ -11,6 +11,8 @@ body {
     font-weight: 500;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* div {
@@ -107,6 +109,10 @@ body {
 
 .maxWidth {
     width: 100%;
+}
+
+.maxWidth_container {
+    max-width: 375px;
 }
 
 .reactionBackground {
