add media query at 750 px and set flex direction to row

--- a/app.css
+++ b/app.css
@@ -174,3 +174,10 @@ button {
 .attribution a {
     color: hsl(228, 45%, 44%);
 }
+
+@media screen and (min-width:750px) {
+    main {
+        display: flex;
+        flex-direction: row;
+    }
+}
