--- a/app.css
+++ b/app.css
@@ -11,7 +11,6 @@ body {
     font-weight: 500;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
@@ -180,4 +179,13 @@ button {
         display: flex;
         flex-direction: row;
     }
+
+    body {
+        justify-content: center;
+    }
+
+    .total {
+        border-radius: 2rem;
+    }
+
 }
