--- a/app.css
+++ b/app.css
@@ -37,33 +37,33 @@ body {
 
 .total>*:nth-child(3) {
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.5em;
     margin-top: 1.25rem;
 }
 
 .total>*:last-child {
-    font-size: .95rem;
+    font-size: .95em;
     text-align: center;
     opacity: .75;
     margin-top: .75rem;
 }
 
 .score>*:first-child {
-    font-size: 3.5rem;
+    font-size: 3.5em;
     font-weight: 800;
     color: white;
 }
 
 .score>*:last-child {
-    font-size: .90rem;
+    font-size: .90em;
     color: hsl(241, 100%, 89%, .5);
     font-weight: 700;
     margin-bottom: 1.5rem;
 }
 
 .total .score {
-    width: 9rem;
-    height: 9rem;
+    width: 9em;
+    height: 9em;
     border-radius: 50%;
     justify-content: end;
     align-items: center;
@@ -90,7 +90,7 @@ body {
     display: flex;
     justify-content: flex-start;
     border-radius: .5rem;
-    font-size: 0.95rem;
+    font-size: 0.95em;
 }
 
 .taskScore *:last-child {
@@ -182,10 +182,16 @@ button {
 
     body {
         justify-content: center;
+        font-size: 20px;
     }
 
     .total {
         border-radius: 2rem;
+        padding: 3rem;
+    }
+
+    .flexColumn {
+        justify-content: space-between;
     }
 
 }
