--- a/app.css
+++ b/app.css
@@ -182,6 +182,8 @@ button {
     main {
         display: flex;
         flex-direction: row;
+        box-shadow: 1rem 1.5rem 2em lightgrey;
+        border-radius: 1.5rem;
     }
 
     body {
@@ -190,7 +192,7 @@ button {
     }
 
     .total {
-        border-radius: 2rem;
+        border-radius: 1.5rem;
         padding: 1.75rem 3rem 3rem 3rem;
     }
     .total .score {
